# upmon

./: .gitignore  CLAUDE.md  FUTURE.md  justfile
ansible/: deploy.yaml  inventory.yaml  push.py  push.sh
backend/: .env  .env.sample  .gitignore  CLAUDE.md  Cargo.toml  access_logs.sample.json  agents.sample.json  config.json  pyproject.toml  users.yaml
backend/migrations/: 20260207_000001_initial.sql
backend/migrations/0001-platform-to-os/: README.md  migrate.py
backend/scripts/upmon-agent/: ACCESS_LOG_EXCEPTION_TESTING.md  ACCESS_LOG_INTEGRATION.md  CLAUDE.md  config.json.j2  config.sample.json  main.py
backend/scripts/upmon-agent/docs/: access-log-writing.md
backend/src/: cache.rs  config.rs  db.rs  env.rs  main.rs  models.rs  monitor.rs  scheduler.rs  server.rs
backend/src/upmon_backend/: access.py  active_monitors.py  auth.py  config.py  db.py  init.sql  main.py  models.py  scheduler.py  spa.py
backend/src/upmon_backend/access_logs/: client.py  config.py  relay_script.py  routes.py  ssh_session.py
backend/src/upmon_backend/agent/: config.py  routes.py
backend/src/upmon_backend/cli/: get_api_key.py  refresh_error_count.py  run_jobs.py  show_errors.py
backend/src/upmon_backend/jobs/: __init__.py  cleanup.py  error_count.py
backend/src/upmon_backend/routes/: agent.py  agent_cleanup.py  agent_errors.py  agent_logs.py  agent_site_summary.py  api_key.py  health.py  monitors.py
backend/tests/: test_access.py  test_access_log_paging.py  test_active_monitors.py  test_auth.py  test_hourly_summary.py
collector/: .env  .gitignore  CLAUDE.md  Cargo.toml  config.json  config.sample.json
docs/: access-log-endpoint.md  access-log-writing.md  agent-debugging.md
(+61 files in other folders)
